fix bullet spacing issue for full-size view, & background color issue and button size for responsive view

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -170,6 +170,15 @@ $menuBorder: #535353;
   padding-left: 7vw;
 }
 
+.bullets2 {
+  display: grid;
+  // width: 10px;
+  // margin-top: 20px;
+  gap: 18px 0;
+  // grid-column-start: 2;
+  // padding-left: 7vw;
+}
+
 .bullet {
   height: 10px;
   width: 10px;
@@ -177,13 +186,13 @@ $menuBorder: #535353;
   border-radius: 40px;
   padding: 0;
   margin-top: 8px;
-  margin-left: -7vw;
+  // margin-left: -7vw;
 }
 
 .bullet-container {
   display: grid;
   grid-template-columns: 15px 250px;
-  grid-gap: 20px;
+  grid-gap: 8px;
   margin-top: 50px;
   margin-bottom: 150px;
 }
@@ -222,7 +231,7 @@ $menuBorder: #535353;
 
   .content {
     display:flex;
-    margin-top:105px;
+    margin-top:150px;
   }
 
 
@@ -235,6 +244,7 @@ $menuBorder: #535353;
     #ourwork,
     #offerings,
     #rates {
+      height: 1.8em;
       text-align: center;
     }
 
